--- a/templates/syslog-ng-server.conf.j2
+++ b/templates/syslog-ng-server.conf.j2
@@ -13,7 +13,12 @@ destination d_loggly {
     template(LogglyFormat));
 };
 
+destination d_stdout {
+	file("/dev/stdout");
+};
+
 log { 
 	source(s_host); 
+	destination(d_stdout);
 	destination(d_loggly); 
 };
