--- a/templates/syslog-ng-server.conf.j2
+++ b/templates/syslog-ng-server.conf.j2
@@ -1,5 +1,5 @@
 source s_host { 
-	tcp(ip("0.0.0.0") port(514));
+	udp(ip("0.0.0.0") port(514));
 };
 
 template LogglyFormat { template("<${PRI}>1 ${ISODATE} ${HOST} ${PROGRAM} ${PID} ${MSGID} [LOGGLY_TOKEN@41058 tag=\"TAG\"] $MSG\n");
